tests/reference/asr-parameter_01-ee9f18c.stderr
semantic error: Cannot assign to a constant variable
 --> tests/errors/parameter_01.f90:3:5
  |
3 |     i = 3
  |     ^^^^^ assignment here
  |
2 |     integer, parameter :: i = 2
  |                           ~~~~~ declared as constant
